<resources>
    <string name="app_name">Quiz App</string>
    <string name="registration">Registration</string>
    <string name="first_name">Enter First Name</string>
    <string name="last_name">Enter Last Name</string>
    <string name="phone">Enter Phone</string>
    <string name="email">Enter Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="question1">1. For accessing date and time for system in your program, you have to import __________ package.</string>
    <string name="question1_a">io</string>
    <string name="question1_b">util</string>
    <string name="question1_c">lang</string>
    <string name="question1_d">All of the above</string>
    <string name="submitAnswers">Submit Answers</string>
    <string name="question2">2. super() is always 1st line in constructor or method?</string>
    <string name="question2_a">Yes</string>
    <string name="question2_b">No</string>
    <string name="question3">3. Method which is used for accepting input i.e readLine() belongs to________package.</string>
    <string name="question3_a">javax.swing</string>
    <string name="question3_b">java.awt</string>
    <string name="question3_c">java.io</string>
    <string name="question3_d">java.lang</string>
    <string name="question4">4. Which of the following statements is true?</string>
    <string name="question4_a">all methods are constructor </string>
    <string name="question4_b">all constructor are method</string>
    <string name="question4_c">some constructor are method</string>
    <string name="question4_d">no constructor is method</string>
    <string name="question5">5. Which method is used for cloning an object?</string>
    <string name="question5_a">getClass()</string>
    <string name="question5_b">clone()</string>
    <string name="question5_c">hashCode()</string>
    <string name="question5_d">notify()</string>
    <string name="question6">"6. Which of the following is not a return type? "</string>
    <string name="question6_a">boolean</string>
    <string name="question6_b">void</string>
    <string name="question6_c">public</string>
    <string name="question6_d">Button</string>
    <string name="question7">7. If result = 2 + 3 * 5, what is the value and type of ‘result’</string>
    <string name="question7_a">17, byte</string>
    <string name="question7_b">25, byte</string>
    <string name="question7_c">17, int</string>
    <string name="question7_d">25, int</string>
    <string name="question8">8. What is the data type for the number 9.6352?</string>
    <string name="question8_a">float</string>
    <string name="question8_b">double</string>
    <string name="question8_c">Float</string>
    <string name="question8_d">Double</string>
    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="mobileerror">Enter a valido mobile</string>
</resources>
