<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <!--Question1-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">
        <RadioButton
            android:id="@+id/question1_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question1_a"
            android:onClick="onRadioButtonQuestion1"/>
        <RadioButton
            android:id="@+id/question1_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question1_b"
            android:onClick="onRadioButtonQuestion1"/>
        <RadioButton
            android:id="@+id/question1_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question1_c"
            android:onClick="onRadioButtonQuestion1"/>
        <RadioButton
            android:id="@+id/question1_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question1_d"
            android:onClick="onRadioButtonQuestion1"/>

    </RadioGroup>


    <!--Question2-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">
        <RadioButton
            android:id="@+id/question2_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question2_a"
            android:onClick="onRadioButtonQuestion2"/>
        <RadioButton
            android:id="@+id/question2_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question2_b"
            android:onClick="onRadioButtonQuestion2"/>
    </RadioGroup>

    <!--Question3-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question3"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">
        <RadioButton
            android:id="@+id/question3_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question3_a"
            android:onClick="onRadioButtonQuestion3"/>
        <RadioButton
            android:id="@+id/question3_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question3_b"
            android:onClick="onRadioButtonQuestion3"/>
        <RadioButton
            android:id="@+id/question3_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question3_c"
            android:onClick="onRadioButtonQuestion3"/>
        <RadioButton
            android:id="@+id/question3_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question3_d"
            android:onClick="onRadioButtonQuestion3"/>

    </RadioGroup>

    <!--Question4-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question4"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">
        <RadioButton
            android:id="@+id/question4_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question4_a"
            android:onClick="onRadioButtonQuestion4"/>
        <RadioButton
            android:id="@+id/question4_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question4_b"
            android:onClick="onRadioButtonQuestion4"/>
        <RadioButton
            android:id="@+id/question4_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question4_c"
            android:onClick="onRadioButtonQuestion4"/>
        <RadioButton
            android:id="@+id/question4_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question4_d"
            android:onClick="onRadioButtonQuestion4"/>

    </RadioGroup>

    <!--Question5-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question5"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">
        <RadioButton
            android:id="@+id/question5_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question5_a"
            android:onClick="onRadioButtonQuestion5"/>
        <RadioButton
            android:id="@+id/question5_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question5_b"
            android:onClick="onRadioButtonQuestion5"/>
        <RadioButton
            android:id="@+id/question5_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question5_c"
            android:onClick="onRadioButtonQuestion5"/>
        <RadioButton
            android:id="@+id/question5_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question5_d"
            android:onClick="onRadioButtonQuestion5"/>

    </RadioGroup>

    <!--Question6-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question6"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">
        <RadioButton
            android:id="@+id/question6_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question6_a"
            android:onClick="onRadioButtonQuestion6"/>
        <RadioButton
            android:id="@+id/question6_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question6_b"
            android:onClick="onRadioButtonQuestion6"/>
        <RadioButton
            android:id="@+id/question6_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question6_c"
            android:onClick="onRadioButtonQuestion6"/>
        <RadioButton
            android:id="@+id/question6_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question6_d"
            android:onClick="onRadioButtonQuestion6"/>

    </RadioGroup>

    <!--Question7-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question7"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">
        <RadioButton
            android:id="@+id/question7_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question7_a"
            android:onClick="onRadioButtonQuestion7"/>
        <RadioButton
            android:id="@+id/question7_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question7_b"
            android:onClick="onRadioButtonQuestion7"/>
        <RadioButton
            android:id="@+id/question7_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question7_c"
            android:onClick="onRadioButtonQuestion7"/>
        <RadioButton
            android:id="@+id/question7_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question7_d"
            android:onClick="onRadioButtonQuestion7"/>

    </RadioGroup>

    <!--Question8-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question8"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">
        <RadioButton
            android:id="@+id/question8_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question8_a"
            android:onClick="onRadioButtonQuestion8"/>
        <RadioButton
            android:id="@+id/question8_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question8_b"
            android:onClick="onRadioButtonQuestion8"/>
        <RadioButton
            android:id="@+id/question8_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question8_c"
            android:onClick="onRadioButtonQuestion8"/>
        <RadioButton
            android:id="@+id/question8_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/question8_d"
            android:onClick="onRadioButtonQuestion8"/>

    </RadioGroup>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF"
        android:background="#0288d1"
        android:onClick="submitAnswers"
        android:text="@string/submitAnswers"/>
    <TextView
        android:id="@+id/textViewDataUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textViewDisplayAnswers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="14dp"
        android:textSize="16sp"
        android:background="#C5CAE9"/>



</LinearLayout>
</ScrollView>